--- a/style.css
+++ b/style.css
@@ -2,40 +2,67 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
   }
-  
   header {
-    background-color: #236ef8;
+    background: linear-gradient(to top left, #3498db, #1abc9c);
     color: #fff;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
-  .logo h1 {
+  h1 {
     margin: 0;
     padding: 0;
     font-size: 54px;
   }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
+  li {
     display: inline;
     margin-left: 20px;
     font-weight: bold;
   }
-  
-  nav ul li a {
+  a {
     color: #fff;
-    text-decoration: none;
+    text-decoration: none;  
   }
-  
-  nav ul li a:hover {
+   a:hover {
     color: #00d9ff;
   }
+.card1, .card2{
+    border: 1px solid #ddd;
+    background: linear-gradient(to top left, #3498db, #1abc9c);
+    margin-top: 50px;
+    margin-left: 20px;
+    text-align: center;
+    width: 450px;
+    height: 400px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.1);
+}
+.card2{
+  margin-left: 510px;
+}
+img{
+  position: absolute;
+  left: 15px;
+  top: 150px;
+  width: 80px;
+  height: 80px;
+  text-align: left;
+}
+h2 {
+    color: white;
+    margin-top: 15px;
+    margin-left: 0px;
+    
+}
+p {
+    color: white;
+    font-size: 14px; /* Ajuster la taille du texte */
+    margin-top: 35px; /* Ajouter de l'espace en haut du paragraphe */
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    text-align: justify;
+  }
+  
+  
   
